deploy/13middleWare.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: solar-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
