deploy/04service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: solar-system
  name: solar-system
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: solar-system
